Make appointments metrics cards into extensions

--- a/packages/esm-active-visits-app/src/visits-summary/visit-detail-overview.scss
+++ b/packages/esm-active-visits-app/src/visits-summary/visit-detail-overview.scss
@@ -214,6 +214,7 @@
 
 .contentSwitcher {
   // TODO: Remove once override gets added to styleguide
+  // Hey Dennis, did this happen?
   :global(.cds--content-switcher-btn) {
     min-width: fit-content;
   }
